--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -398,3 +398,13 @@
 	pages = {107},
 	file = {McKinley et al. - Review of salmon escapement goals in Upper Cook In.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\M727NSRW\\McKinley et al. - Review of salmon escapement goals in Upper Cook In.pdf:application/pdf},
 }
+
+@techreport{dfo_wcviSAR_2010,
+	title = {Assessment OF {West} {Coast} {Vancouver} {Island} {Chinook} and 2010 Forecast},
+	language = {en},
+	number = {Can. Sci. Advis. Sec. Sci. Advis. Rep. 2011/032},
+	author = {DFO},
+	year = {2010},
+	pages = {17},
+
+}
